# ForestStaffScheduleSystem

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  database.ini.example  main.cpp
dao/: AttendanceDAO.cpp  AttendanceDAO.h  EmployeeDAO.cpp  EmployeeDAO.h  ScheduleDAO.cpp  ScheduleDAO.h  UserDAO.cpp  UserDAO.h
database/: Config.cpp  Config.h  DatabaseManager.cpp  DatabaseManager.h  EmployeeComboHelper.cpp  EmployeeComboHelper.h
model/: Attendance.h  Employee.h  Schedule.h  ScheduleWeek.h
service/: AttendanceService.cpp  AttendanceService.h  EmployeeService.cpp  EmployeeService.h  ScheduleService.cpp  ScheduleService.h
sql/: forest_schedule_system.sql
tests/: ScheduleWeekTest.cpp
ui/: AppStyle.cpp  AppStyle.h  AttendanceWidget.cpp  AttendanceWidget.h  DashboardWidget.cpp  DashboardWidget.h  EmployeeWidget.cpp  EmployeeWidget.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  ScheduleWidget.cpp  ScheduleWidget.h  StatisticsWidget.cpp  StatisticsWidget.h
